# karton_memory_watcher

./: README.md  pyproject.toml
.github/workflows/: pypi-workflow.yml
karton/memory_watcher/: __init__.py  watcher.py
tests/: tests.py
