[project]
name = "karton_memory_watcher"
version = "1.0.1"
authors = [
  { name="Rakovsky Stanislav", email="iam@disasm.me" },
]
description = "Memory watcher for karton consumers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["karton-core>=5.0.0", "psutil"]

[project.urls]
"Homepage" = "https://github.com/rakovskij-stanislav/karton_memory_watcher"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"